<resources>
    <string name="app_name">Wan</string>
    <string name="blog_post">博文</string>
    <string name="project">项目</string>
    <string name="box">宝箱</string>
    <string name="tool">工具</string>
    <string name="home">首页</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu">菜单</string>
    <string name="profile">个人</string>
    <string name="log_out">登出</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="project_category">项目分类</string>
    <string name="set">设置</string>
    <string name="about">关于</string>
    <string name="links">友情链接</string>
    <string name="share_project">分享项目</string>
    <string name="openapis">OPENAPIS</string>
    <string name="like">喜欢</string>
    <string name="login">登录</string>
    <string name="collect_links">收藏网站</string>
    <string name="chapter">/%s</string>
    <string name="chapter_one_or_none">%s</string>
    <string name="fresh">『NEW』</string>
    <string name="empty" />
    <string name="title_activity_read">ReadActivity</string>
    <string name="system_browse_open">系统浏览器打开</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_account">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="error_invalid_email">请检查邮箱格式</string>
    <string name="error_invalid_password">密码需要大于等于6位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填</string>
    <string name="error_incorrect_again_password">两次密码不匹配</string>
    <string name="log_in">LOG IN</string>
    <string name="register_en">REGISTER</string>
    <string name="action_settings">Settings</string>

    <!--成功提示信息-->
    <string name="success_login">登录成功</string>
    <string name="success_register">注册成功</string>
    <string name="success_collect">收藏成功</string>
    <!--失败提示信息-->

    <!---->
    <string name="again_touch_exit">再按一次退出</string>
    <string name="not_login">未登录</string>
    <string name="success_uncollect">已取消收藏</string>
    <string name="github">GITHUB</string>
    <string name="add_own_project">添加我的项目</string>
    <string name="post_tree">POST TREE</string>
    <string name="copy_link">复制链接</string>
    <string name="copied">已复制</string>
    <string name="copy_fail">复制失败</string>
    <string name="web_navigation">WEB NAVIGATION</string>
    <string name="title_start_">『</string>
    <string name="title_end_">』</string>
    <string name="en_big_project_category">PROJECT CATEGORY</string>
    <string name="en_big_friend_link">FRIEND LINK</string>
    <string name="settings">SETTINGS</string>
    <string name="pic_cache">图片缓存：</string>
    <string name="plugin_clean">插件清理：%s 个</string>
    <string name="search">搜索</string>
    <string name="collect_post">收藏的文章</string>
    <string name="about_text">
        　　该项目作为个人总结性的项目，随着个人成长后期会不断更新。\n\n
        　　项目希望做到界面简洁大方，代码简洁易用。项目肯定有冗余的代码和BUG。\n
        　　· 有什么建议或BUG，提出Issues\n
        　　· 如果能帮忙改一下优化一下，Fork项目\n
        　　· 觉得不错，给个★小星星哦！(〃\'▽\'〃) \n\n
        　　项目主要是以学习为目的，有些比较夸张的不要介意！比如说加入的Python，只是用来解析网页数据。。。\n
        　　加入了Kotlin环境，但是目前没有用 \n\n
        项目主要框架结构：\n
        　　MVVM + Dagger2 + DataBinding + Lifecycle + OkHttp + Retrofit2 \n

        \n\n 开源地址：\n https://github.com/xujiaji/WanAndroid

        \n\n WanAndroid API：\n http://www.wanandroid.com
    </string>
    <string name="opean_source_libraries">开源Libraries</string>
    <string name="project_use_libraries">项目中使用的 Library</string>
    <string name="give_friend_download"><![CDATA[分享给身边的好友扫描下载 >]]></string>
    <string name="format_have_sum_category">%s个子分类</string>
    <string name="start_init_tree_data">正在初始化体系数据，请稍后...</string>
    <string name="download_todo_apk">下载安装Todo Apk（建议）</string>

</resources>
