<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/ripple_theme"
                android:src="@drawable/ic_back"
                android:tint="@color/textPrimary" />


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_foreground"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Version"
                bind:displayVersion="@{true}"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textSecondary"/>

            <Button
                android:id="@+id/btnLookLibraries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_use_libraries"
                style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autoLink="all"
                android:textColor="@color/textPrimary"
                android:lineSpacingExtra="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32dp"
                android:text="@string/about_text"/>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</layout>
