<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/ripple_theme"
                android:src="@drawable/ic_back"
                android:tint="@color/textPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_marginStart="30dp"
                android:textColor="@color/textPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set"
                android:layout_marginStart="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/textSecondary" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="70dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:focusable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/pic_cache"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80" />

                <ImageView
                    android:layout_width="@dimen/spacing_xmlarge"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:scaleType="center"
                    android:tint="@color/textPrimary"
                    app:srcCompat="@drawable/ic_clean" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginRight="@dimen/spacing_large"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="70dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large"
                android:focusable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/plugin_clean"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80" />

                <ImageView
                    android:layout_width="@dimen/spacing_xmlarge"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:scaleType="center"
                    android:tint="@color/textPrimary"
                    app:srcCompat="@drawable/ic_clean" />

            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</layout>
