<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">


    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="isRegister"
            type="boolean" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">


                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ripple_white_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_back"/>

                <FrameLayout
                    android:id="@+id/layoutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:text="@{isRegister ? @string/register_en: @string/log_in}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="@{isRegister ? @string/action_register : @string/action_sign_in}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </FrameLayout>

            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:visibility="gone"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|center_horizontal"
            bind:visibleGone="@{isLoading}" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            bind:visibleGone="@{!isLoading}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_account"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutAgainPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/againPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_confirm_password"
                        android:imeActionId="6"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/signIn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_round"
                    android:onClick="onClickOk"
                    android:text="@{isRegister ? @string/action_register : @string/action_sign_in}"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/ripple_white"
            android:src="@drawable/ic_switch"
            app:fabSize="normal"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|end" />

    </android.support.design.widget.CoordinatorLayout>

</layout>